Changed the HTML for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -16,6 +16,11 @@
         <div>
             <h2><a href="">My second post</a></h2>
             <p>and it's wonderful .</p>
+         <div>
+            <h2><a href="">something important...</a></h2>
+            <p>lalalala!
+                lalalala laot!
+                love love love.</p>
         </div>
     </body>
 </html>
